格式化部分代码